--- a/style/global.css
+++ b/style/global.css
@@ -39,7 +39,7 @@ body{
     height:100vh;
     background: var(--purple);
     margin: 100px 0px 20px 160px;
-    overflow:auto;
+    overflow:hidden;
 }
 
 button, #button{
